What - [jpegbox] remove hmu.py and checkout from pyjects/hamu/hamu.py. @Description/root cause - Why     1. remove hmu.py (that is renamed to hamu.py now).     2. checkout hamu.py from pyjects/hamu/hamu.py.     3. add local .gitignore to filter the folders pyjects and release.
@Resolution - How
    as described in description/root cause section.

@Reviewer
...

--- a/jpegbox/Makefile
+++ b/jpegbox/Makefile
@@ -1,14 +1,32 @@
 
 .PHONY: all clean release
+PYJECTS:=pyjects
+HAMU_DIR:=hamu
+HAMU_PY:=./$(PYJECTS)/$(HAMU_DIR)/hamu.py
 RELEASE:=release
 SOURCE:=jpegbox.html
 OUTPUT:=$(RELEASE)/jpegbox.html
 
-all: release
+define hamu
+    @if [ ! -f $(HAMU_PY) ]; then\
+    mkdir -p $(PYJECTS);\
+    cd pyjects;\
+    git init;\
+    git remote add -f origin http://github.com/alpha-jacobshih/pyjects;\
+    git config core.sparseCheckout true;\
+    echo "hamu/*" > .git/info/sparse-checkout;\
+    git checkout master;\
+    fi
+endef
+
+all: $(HAMU_PY) release
+
+$(HAMU_PY):
+	$(call hamu)
 
 release:
 	@if [ ! -d $(RELEASE) ]; then mkdir -p $(RELEASE); fi
-	@./hmu.py merge --source $(SOURCE) --output $(OUTPUT)
+	@$(HAMU_PY) merge --source $(SOURCE) --output $(OUTPUT)
 	@ls -l $(OUTPUT)
 
 clean:
